@@ -1,19 +1,20 @@
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class Main {
     public static void main(String[] args) {
         // setup - change all these values!
-        int fragType = 0; // 0 - hash, 1 - value
-        LinkedList<int[]> valRanges = (fragType == 1) ? generateValRanges() : null;
-        LinkedList<String> workload = generateWorkload();
+        int fragType = 1; // 0 - hash, 1 - value
+        List<int[]> valRanges = (fragType == 1) ? generateValRanges() : null;
+        List<String> workload = generateWorkload();
         int numNodes = 2;
         int numFrags = 5; // only needed/used for hash fragmentation type (for value frag type, number of fragments is determined by the value ranges list)
-        LinkedList<int[]> db = generateDB();
+        List<int[]> db = generateDB();
 
         // create fragments, nodes, and an index
-        LinkedList<Fragment> fragments = (fragType == 1) ? createFragments(valRanges, db) : createFragments(db, numFrags);
-        Map<Integer, Fragment> index = createIndex(fragments);
-        LinkedList<Node> nodes = createNodes(numNodes, fragments);
+        List<Fragment> fragments = (fragType == 1) ? createFragments(valRanges, db) : createFragments(db, numFrags);
+        Map<Integer, List<Fragment>> index = createIndex(fragments);
+        List<Node> nodes = createNodes(numNodes, fragments);
 
         runThroughWorkload(workload, index, nodes);
     }
@@ -22,29 +23,39 @@ public class Main {
         Runs through the sample workload and prints out,
         for every query, for every node, the amount of networks and scans it had to do
      */
-    public static void runThroughWorkload(LinkedList<String> workload, Map<Integer, Fragment> index, LinkedList<Node> nodes) {
-        LinkedList<Fragment> relevantFrags = new LinkedList<>();
-
+    public static void runThroughWorkload(List<String> workload, Map<Integer, List<Fragment>> index, List<Node> nodes) {
         for (String query : workload) {
-            relevantFrags = processQuery(query, index);
+            Map<Integer, List<Fragment>> relevantFrags = processQuery(query, index);
+            List<Node> relevantNodes = new LinkedList<>();
 
-            for (Fragment frag : relevantFrags) {
-
+            System.out.println(nodes);
+            for (Integer key : relevantFrags.keySet()) {
+                for (Fragment frag : relevantFrags.get(key)) {
+                    for (Node node : nodes) {
+                        System.out.println("here");
+                        if (node.getFragments().contains(frag)) {
+                            System.out.println(frag);
+                            node.doScan(frag, key);
+                            node.doNetwork(frag, key);
+                        }
+                    }
+                }
             }
 
             System.out.println("Query " + query);
             for (Node node : nodes) {
                 System.out.println("-----");
-                System.out.println("Networks : " + node.getNetworks());
-                System.out.println("Scans : " + node.getScans());
+                System.out.println("NODE = ");
+                System.out.println("Networks: " + node.getNetworks());
+                System.out.println("Scans: " + node.getScans());
             }
+            System.out.println("========");
         }
     }
 
-    public static LinkedList<Fragment> processQuery(String query, Map<Integer, Fragment> index) {
-        LinkedList<Fragment> relevantFrags = new LinkedList<>();
-        int start = 0;
-        int end = 0;
+    public static Map<Integer, List<Fragment>> processQuery(String query, Map<Integer, List<Fragment>> index) {
+        Map<Integer, List<Fragment>> relevantFrags = new HashMap<>();
+        int start, end;
 
         if (query.contains("-")) {
             String[] split = query.split("-");
@@ -52,7 +63,7 @@ public class Main {
             end = Integer.parseInt(split[1]);
         } else if (query.contains(">")) {
             start = Integer.parseInt(query.replace(">", ""));
-            end = 2016;
+            end = 2017;
         } else if (query.contains("<")) {
             start = 2000;
             end = Integer.parseInt(query.replace("<", ""));
@@ -61,21 +72,32 @@ public class Main {
             end = start;
         }
 
-        for (int i = start; i <= end; i++) {
-            relevantFrags.add(index.get(i));
+        for (int i = start; i < end; i++) {
+            relevantFrags.put(i, index.get(i));
         }
+
+//        relevantFrags = index.entrySet().stream().filter(e -> e.getKey() >= start && e.getKey() <= end).map(e -> e.getValue()).flatMap(l -> l.stream()).collect(Collectors.toList());
+
         return relevantFrags;
     }
 
     /*
         Creates an "index" that maps values to the fragment they can be found in
      */
-    public static Map<Integer, Fragment> createIndex(LinkedList<Fragment> fragments) {
-        Map<Integer, Fragment> index = new HashMap<>();
+    public static Map<Integer, List<Fragment>> createIndex(List<Fragment> fragments) {
+        Map<Integer, List<Fragment>> index = new HashMap<>();
 
         for (Fragment frag : fragments) {
-            for (int i2 : frag.getIndex()) {
-                index.put(i2, frag);
+            for (int key : frag.getIndex().keySet()) {
+                if (index.containsKey(key)) {
+                    List<Fragment> oldList = index.get(key);
+                    oldList.add(frag);
+                    index.replace(key, oldList);
+                } else {
+                    List<Fragment> newList = new LinkedList<>();
+                    newList.add(frag);
+                    index.put(key, newList);
+                }
             }
         }
 
@@ -85,20 +107,16 @@ public class Main {
     /*
         Creates nodes
      */
-    public static LinkedList<Node> createNodes(int numNodes, LinkedList<Fragment> fragments) {
-        LinkedList<Node> nodes = new LinkedList<>();
+    public static List<Node> createNodes(int numNodes, List<Fragment> fragments) {
+        List<Node> nodes = new LinkedList<>();
 
         for (int i = 0; i < numNodes; i++) {
             nodes.add(new Node());
         }
 
         // assigns fragments to nodes
-        int fragmentsPerNode = fragments.size() / numNodes;
-        int i = 0;
-
-        while (!fragments.isEmpty()) {
-            nodes.get(i%numNodes).addFragment(fragments.pop());
-            i++;
+        for (int i = 0; i < fragments.size(); i++) {
+            nodes.get(i%numNodes).addFragment(fragments.get(i));
         }
 
         return nodes;
@@ -107,8 +125,8 @@ public class Main {
     /*
         Creates fragments if fragmentation type is value
      */
-    public static LinkedList<Fragment> createFragments(LinkedList<int[]> valRanges, LinkedList<int[]> db) {
-        LinkedList<Fragment> fragments = new LinkedList<>();
+    public static List<Fragment> createFragments(List<int[]> valRanges, List<int[]> db) {
+        List<Fragment> fragments = new LinkedList<>();
 
         // value fragmentation - will fragment based on a specified list of value ranges
         int rangeStart, rangeEnd;
@@ -119,20 +137,23 @@ public class Main {
             rangeStart = range[0];
             rangeEnd = range[1];
             Fragment tempFrag = new Fragment();
-            int currAttr = db.getFirst()[0];
+            int currAttr = db.get(0)[0];
             Boolean newAttr = true;
+            List<Integer> indexes = new LinkedList<>();
 
             for (int[] row : db) {
                 if (row[0] >= rangeStart && row[0] < rangeEnd) {
                     if (newAttr) {
                         currAttr = row[0];
-                        tempFrag.addIndex(currAttr);
+                        indexes.add(currAttr);
                     }
                     tempFrag.addRow(row);
                 }
                 newAttr = currAttr != row[0];
             }
-
+            for (Integer num : indexes) {
+                tempFrag.addIndex(num);
+            }
             fragments.add(tempFrag);
         }
 
@@ -142,8 +163,8 @@ public class Main {
     /*
         Creates fragments if fragmentation type is hash
      */
-    public static LinkedList<Fragment> createFragments(LinkedList<int[]> db, int numFrags) {
-        LinkedList<Fragment> fragments = new LinkedList<>();
+    public static List<Fragment> createFragments(List<int[]> db, int numFrags) {
+        List<Fragment> fragments = new LinkedList<>();
 
         for (int i = 0; i < numFrags; i++) {
             fragments.add(new Fragment());
@@ -153,18 +174,14 @@ public class Main {
         Fragment tempFrag;
         for (int[] row : db) {
             attr = row[0];
-            tempFrag = fragments.get(attr%numFrags);
+            tempFrag = fragments.get((attr+row[1])%numFrags);
             tempFrag.addRow(row);
-
-            //if the fragment does not yet contains a row with a value equal to the current value
-            if (!tempFrag.getIndex().contains(attr)) {
-                tempFrag.addIndex(row[0]);
-            }
         }
 
-        System.out.println(fragments);
         for (Fragment frag : fragments) {
-            System.out.println(frag);
+            for (int i = 2000; i < 2017; i++) {
+                frag.addIndex(i);
+            }
         }
 
         return fragments;
@@ -173,29 +190,27 @@ public class Main {
     /*
         Generates a sample workload with example queries - right now, just a list of "WHERE VALUE = *"s
      */
-    public static LinkedList<String> generateWorkload() {
-        LinkedList<String> workload = new LinkedList();
+    public static List<String> generateWorkload() {
+        List<String> workload = new LinkedList<>();
 
         // change this!
-        String wl = "2012\n" +
-                "2012-2013\n" +
-                "2013\n" +
-                ">2012\n" +
-                "2012\n" +
-                "2012-2013\n" +
-                ">2010\n" +
-                "2011-2012\n" +
-                "2012\n" +
-                "<2013\n" +
-                "2012-2013\n" +
-                "<2013\n" +
-                "2011-2013\n" +
-                "2012\n" +
-                "2013\n";
+        String wl = "2010\n" +
+                "2012-2013\n";
+//                "2013\n" +
+//                ">2012\n" +
+//                "2012\n" +
+//                "2012-2013\n" +
+//                ">2010\n" +
+//                "2011-2012\n" +
+//                "2012\n" +
+//                "<2013\n" +
+//                "2012-2013\n" +
+//                "<2013\n" +
+//                "2011-2013\n" +
+//                "2012\n" +
+//                "2013\n";
 
-        String[] wla = wl.split("\n");
-        for (String query : wla)
-            workload.add(query);
+        Collections.addAll(workload, wl.split("\n"));
 
         return workload;
     }
@@ -203,15 +218,15 @@ public class Main {
     /*
         If value-based fragmentation, a list of value ranges to fragment on
      */
-    public static LinkedList<int[]> generateValRanges() {
-        LinkedList<int[]> valRanges = new LinkedList();
+    public static List<int[]> generateValRanges() {
+        List<int[]> valRanges = new LinkedList<>();
 
         // change this!
         // ranges for "Year" from [x, y)
         valRanges.add(new int[]{2000, 2002});
         valRanges.add(new int[]{2002, 2004});
         valRanges.add(new int[]{2004, 2010});
-        valRanges.add(new int[]{2010, 2016});
+        valRanges.add(new int[]{2010, 2017});
 
         return valRanges;
     }
@@ -219,29 +234,26 @@ public class Main {
     /*
         Generates a random database with *numEntries* rows and 2 attributes
      */
-    public static LinkedList<int[]> generateDB() {
+    public static List<int[]> generateDB() {
         int numEntries = 200;
-        LinkedList<int[]> db = new LinkedList<int[]>(); // Year, OtherAttribute
+        List<int[]> db = new LinkedList<>(); // Year, OtherAttribute
         Random rand = new Random();
 
         // values for "Year" range from 2000 to 2016
-        // values for "OtherAttribute" from 0 to 999
+        // values for "OtherAttribute" from 1 to 999
         // feel free to change this too
         for (int i = 0; i < numEntries; i++) {
-            db.add(new int[]{rand.nextInt(16) + 2000, rand.nextInt(1000)});
+            db.add(new int[]{rand.nextInt(18) + 1999, rand.nextInt(1000)+1});
         }
 
         //sort by value "Year"
-        Collections.sort(db, new Comparator<int[]>() {
-            @Override
-            public int compare(int[] o1, int[] o2){
-                if (o1[0] > o2[0])
-                    return 1;
-                else if (o1[0] < o2[0])
-                    return -1;
-                else
-                    return 0;
-            }
+        Collections.sort(db, (o1, o2) -> {
+            if (o1[0] > o2[0])
+                return 1;
+            else if (o1[0] < o2[0])
+                return -1;
+            else
+                return 0;
         });
 
         return db;
